--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -20,7 +20,8 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
+        //'client_id': 'df7c5a17-52dd-4c88-8a32-cdfb557ba758',
+        'client_id': 'd06e82ab-df7a-40de-aefb-526e2309ad8b',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
